Tools/DumpRenderTree/TestNetscapePlugIn/main.cpp
@@ -324,7 +324,8 @@ NPError NPP_Destroy(NPP instance, NPSavedData **save)
             CFRelease(obj->coreAnimationLayer);
 #endif
 
-        obj->pluginTest->NPP_Destroy(save);
+        if (obj->pluginTest)
+            obj->pluginTest->NPP_Destroy(save);
 
         browser->releaseobject(&obj->header);
     }
